force-app/main/default/objects/sked_Product_Goal__c/sked_Product_Goal__c.object-meta.xml
<CustomObject>
    <label>Product Goal</label>
    <nameField>
        <displayFormat>PG-{000000}</displayFormat>
        <label>Product Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>