force-app/main/default/objects/sked_Product_Goal__c/fields/sked_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Type__c</fullName>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Drive_Types</valueSetName>
    </valueSet>
</CustomField>