force-app/main/default/objects/sked_Product_Goal__c/fields/sked_Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Procedure_Type__c</fullName>
    <label>Procedure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WB</fullName>
            </value>
            <value>
                <fullName>2RBC</fullName>
            </value>
            <value>
                <fullName>APH</fullName>
            </value>
            <value>
                <fullName>OAPH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>