force-app/main/default/objects/sked_Product_Goal__c/fields/sked_Total_Products__c.field-meta.xml
<CustomField>
    <fullName>sked_Total_Products__c</fullName>
    <label>Total Products</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>