force-app/main/default/objects/sked_Product_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Date_of_Goal__c</columns>
    <columns>sked_Drive_Type__c</columns>
    <columns>sked_Procedure_Type__c</columns>
    <columns>sked_Total_Products__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Collection_Operation__c</field>
        <operation>equals</operation>
        <value>Arlington TX</value>
    </filters>
    <label>All</label>
</ListView>